2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Fixed bug in DeleteFile(string, string). Also minor
	  cosmetic changes for other methods

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Put in a check to make sure metadata isn't updated on a local
	  file (as it'll fail)
	* src/FileSystem.cs: Added a parameterless overload for GetFolders which
	  returns all the folders in the root directory.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: An empty directory is allowable, it'll just work off
	  the root directory then.

2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: GetDataAndSize handles the scenario when a null
	  pointer is returned.

2007-09-28  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/FileSystem.cs, src/Camera.cs: Renamed the CameraDevice
	  property to just 'Device'

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added method to help guess the mimetype
	* src/FileSystem.cs: Added methods to check if a directory already exists,
	  to create a new directory and remove an existing one. Setting mimetype
	  on new files correctly.
	* src/Files/MusicFile.cs: Added public constructor
	* src/Base/CameraFile.cs: SetDataAndLength :Copy the data into the unmanaged
	  array.  GetDataAndLength: If we are returned a null pointer, don't try
	  to copy out data.

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Forgot to change the method declaration

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Passing the data the correct way to
	  gp_file_set_data_and_size

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: The internal code correctly prefixes the path to a